--- a/views/map.ejs
+++ b/views/map.ejs
@@ -38,14 +38,14 @@
 	        <section id="map">
 			</section>
 	    </footer>
-		<div class="main-search-input-wrap">
+		<!-- <div class="main-search-input-wrap">
 			<div class="main-search-input fl-wrap">
 				<div class="main-search-input-item">
 					<input type="text"  value="" placeholder="Search Products...">
 				</div>
 					<button class="main-search-button">Search</button>
 			</div>
-		</div>
+		</div> -->
 		<br />
 		<footer>
 			<form method='POST' action='/map' id="form-submit">
