--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/css/main.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     </head>
     <body style="background-size: cover;">
         <div id="wrapper">
@@ -68,8 +69,7 @@
                         </div>
                     </div>
                         
-                    
-                        <div class="py-4">
+                        <div class="py-4 border-bottom">
                             <!-- <h5 class="mb-3">Favourite locals</h5> -->
                             <center><h2><a style="color:brown">Favourite locals 🥰</a></h2></center>
                             <br>
@@ -87,6 +87,42 @@
                                     </div>
                                 </form>
                             
+                        </div>
+                        
+                        <div class="py-4 border-bottom">
+
+                            <center><h2><a style="color:lightblue">reviews🥰</a></h2></center>
+                            <form action="/users/profile/review" method="GET">
+                                <div id="container-recensioni"></div>
+
+
+                                <div style="float: right; margin-right: 2%;">
+                                    <input href="/users/profile/review" class="review-button" type="submit" value="write a review" onclick="">
+                                    <br>
+                                    <br>
+                                </div>
+                            </form>    
+
+                            <script src="../javascript/display_rev.js"></script>
+                            
+                            <form method='GET' action="/review/list" id="form-submit">  
+                                <div class="container-reviews-grid" id="container-reviews-grid">
+                                    
+                                
+                                    <!-- <h1 class="box-title">Box Title</h1>
+                                    <h3 class="box-subtle">Nome utente</h3>
+                                    <p class="box-text">This is some sample text inside the box.</p> -->
+
+                                </div>
+                            </form> 
+
+
+                            <br>
+                        </div>
+
+                        <div class="'py-4">
+                            <center><h2><a style="color:lightblue">last visited</a></h2></center>
+                            <br>
                         </div>
 
                     </div>
