--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,8 +33,18 @@
                 <div class="bg-white shadow overflow-hidden w-100">
                     <div class="px-4 pt-0 bg-white border-bottom">
                         <br />
-                        <div class="media align-items-end profile-header">
-                            <div class="profile py-4 mr-3 "><img src="../iconpng/profile.jpg" alt="..." width="130" class="rounded-circle "></div>
+                        <div class="media align-items-center profile-header">
+                            <div class="profile py-4 mr-1 text-center">
+                                <% if (imgSrc) { %>
+                                    <img src="../uploads/<%= imgSrc %>" alt="..." width="130" class="rounded-circle ">
+                                <% } else { %>
+                                    <img src="../iconpng/profile.jpg" alt="..." width="130" class="rounded-circle ">
+                                <% } %>
+                                    <h6 style="margin-top: 20px;"><%= username %></h6>
+                                <% if (bio) { %>
+                                    <p style="font-size: 2ch; margin-top: 40px; margin-bottom: 20px; width: 300px;"><%= bio %></p>
+                                <% } %>
+                            </div>
                             <div class="media-body mb-4" >
                                 <center><h2><a>Welcome on Let's Party</a></h2></center>
                                 <center><h4 class = "mt-0 ml-2"></small>Hello <%= user.charAt(0).toUpperCase() + user.slice(1) %> 🥳</h4><br></center>
