finita task mail e reviews

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5138,3 +5138,62 @@ input, select, textarea {
 	display: grid;
 	grid-template-columns: auto auto auto auto;;
   }
+
+  #fas fa-trash{
+	right: 10px;
+	bottom: 10px;
+	position: relative;
+  }
+
+  /* POP UP per eliminare account */
+
+  #popup-container {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	justify-content: center;
+	align-items: center;
+  }
+  
+  #popup {
+	background-color: white;
+	padding: 40px;
+	border-radius: 5px;
+	text-align: center;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  /* POPUP per invitare amici */
+  .popup-friends {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+
+  .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  #openPopup {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+	transition: left 0.3s ease-in-out;
+  }
+  #openPopup.hidden {
+    opacity: 0;
+  }
