--- a/views/review.ejs
+++ b/views/review.ejs
@@ -34,6 +34,11 @@
                             <select name="locale" id="locale">
                             </select>
                             <input type="submit" value="Invia" style="display: block; margin: 0 auto; width: 100px; margin: 10px;" >
+                            <script>
+                                function openProfile(){
+                                    
+                                }
+                            </script>
                         </div>
                         <div class="right-div">
                             <label for="recensione">Scrivi la recensione:</label>
