--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,7 +5,8 @@
         <title>Let's Party Profile</title>
         <link rel = "icon" href = "iconpng/summercocktail.png" type = "image/x-icon"> 
         <link rel="stylesheet" href="/css/main.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     </head>
@@ -29,7 +30,18 @@
             <footer id="footer" style="background-color: transparent;">
                 <div id="mySideBar" class="sidebar">
                     <a href="/users/editProfile">EDIT PROFILE</a>
-                    <a href="/logout">LOGOUT</a>
+                    <a href="#" onclick="logOut()">LOGOUT</a>
+                    <a href="#" id="showPopup" onclick="handlePopUp()">DELETE PROFILE</a>
+
+                    <script src="../javascript/listeners.js"></script>
+
+                    <div id="popup-container">
+                        <div id="popup">
+                          <p style="font-size: 30px;">Are you sure you want to delete your profile?</p>
+                          <button id="no-button" onclick="handlePopUp()">NO</button>
+                          <button id="delete-button" onclick="deletePopUp()">OK</button>
+                        </div>
+                      </div>
                 </div>
                 <div class="bg-white shadow overflow-hidden w-100">
                     <div class="px-4 pt-0 bg-white border-bottom">
@@ -45,23 +57,9 @@
                                 <br />
                                 <h3 class="pt-2">SETTINGS</h3>
                                 <script>
-                                    function moveNav() {
-                                      var sidebar = document.getElementById("mySideBar");
-                                      var sidebarWidth = sidebar.style.width;
-                                      console.log("0 ");
-                                      if ($(window).width() >= 768){
-                                        console.log("1 ");
-                                        if (sidebarWidth === '250px') {
-                                            sidebar.style.width = "0";
-                                            sidebar.style.display = "none";
-                                        }else {
-                                            sidebar.style.width = "250px";
-                                            sidebar.style.display = "block";
-                                        } 
-                                      }
-                                      }
                                     
-                                    </script>
+                                    
+                                </script>
 
                             </div>
 
@@ -107,23 +105,61 @@
                             
                             <form method='GET' action="/review/list" id="form-submit">  
                                 <div class="container-reviews-grid" id="container-reviews-grid">
-                                    
-                                
-                                    <!-- <h1 class="box-title">Box Title</h1>
-                                    <h3 class="box-subtle">Nome utente</h3>
-                                    <p class="box-text">This is some sample text inside the box.</p> -->
-
+               
                                 </div>
-                            </form> 
-
-
+                            </form>
                             <br>
                         </div>
 
-                        <div class="'py-4">
+                        <div class="'py-4 border-bottom">
                             <center><h2><a style="color:lightblue">last visited</a></h2></center>
                             <br>
                         </div>
+                        
+
+                        <div id="invite-div" style="padding: 30px;">
+                            
+                            <h2>Invita gli amici</h2>
+                            <button id="openPopup" onclick="friendsPopUp()">Invita un amico</button>
+                            <div>
+                            <p>Per noi di Let's Party la community è molto importante, condividi questa opportunità con i tuoi amici e colleghi!</p>
+                            </div>
+
+                            <div class="popup" id="popup-friends" style="display: none;">
+                                <div class="popup-content">
+                                    <form method="post" action="/send_email/friends">
+                                        <div class="fields">
+                                            <div class="field">
+                                                <label for="name">Your friend's name</label>
+                                                <input type="text" name="name" id="name" required/>
+                                            </div>
+                                            <div class="field">
+                                                <label for="email">His email</label>
+                                                <input type="text" name="email" id="email" required/>
+                                            </div>
+                                            <div class="field">
+                                            <label for="message">Message for Him</label>
+                                            <textarea name="message" id="message" rows="3"></textarea>
+                                            </div>
+                                        </div>
+                                        <ul class="actions">
+                                            <li><input type="submit" value="Send Message" /></li>
+                                        </ul>
+                                    </form>
+                                </div>
+                            </div>
+                            <script>
+                                const popup = document.getElementById('popup-friends');
+                                const button = document.getElementById("openPopup");
+                                popup.addEventListener('click', (event) => {
+                                    if (event.target === popup) {
+                                    popup.style.display = 'none';
+                                    button.classList.remove('hidden');
+                                    }
+                                });
+                            </script>
+
+                        </div>                        
 
                     </div>
                 </div>
