creazione e mostra di post

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
 						<ul class="links">
 							<li class="active"><a href="/">About Us</a></li>
 							<li><a href="/users/map">MAP</a></li>
-                        <li><a href="../socialNetwork.html">SOCIAL NETWORK</a></li>
+                        <li><a href="/socialNetwork">SOCIAL NETWORK</a></li>
                         <li><a href="../FutureProject.html">FUTURE PROJECTS</a></li>
 						<li><a href="/users/login">LOGIN</a></li>
                         <li><a href="../contacts.html">CONTACTS</a></li>
