--- a/views/review.ejs
+++ b/views/review.ejs
@@ -18,7 +18,7 @@
                 <ul class="links">
                     <li ><a href="/">About Us</a></li>
                     <li><a href="/users/map">MAP</a></li>
-                <li><a href="../socialNetwork.html">SOCIAL NETWORK</a></li>
+                <li><a href="/socialNetwork">SOCIAL NETWORK</a></li>
                 <li><a href="../FutureProject.html">FUTURE PROJECTS</a></li>
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="../contacts.html">CONTACTS</a></li>
@@ -34,15 +34,11 @@
                             <select name="locale" id="locale">
                             </select>
                             <input type="submit" value="Invia" style="display: block; margin: 0 auto; width: 100px; margin: 10px;" >
-                            <script>
-                                function openProfile(){
-                                    
-                                }
-                            </script>
+                            
                         </div>
                         <div class="right-div">
                             <label for="recensione">Scrivi la recensione:</label>
-                            <textarea name="recensione" id="recensione" rows="8"></textarea>
+                            <textarea name="recensione" id="recensione" rows="8" required></textarea>
                         </div>
 
                     </div>
