--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5197,3 +5197,51 @@ input, select, textarea {
   #openPopup.hidden {
     opacity: 0;
   }
+
+/* POST FEED */
+.post-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-height: 100vh;
+  }
+  
+  .post {
+	background-color: white;
+	box-shadow: 0px 1px 10px rgba(10, 9, 9, 0.1);
+	padding: 20px;
+	border-radius: 2px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .post h1 {
+	margin: 0 0 10px;
+  }
+  
+  .post p {
+	flex-grow: 1;
+  }
+  #popup-textarea {
+	width: 100%;
+	height: 100px;
+	margin-bottom: 10px;
+	padding: 5px;
+  }
+  
+  /* .button-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	margin-top: 10px;
+  }
+  
+  .like-button {
+	background-color: #3498db;
+	color: white;
+	border: none;
+	padding: 8px 16px;
+	border-radius: 5px;
+	cursor: pointer;
+  } */
