finiti post, like e logout

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,14 @@
 						<li><a href="/users/profile">PROFILE</a></li>
 						</ul>
 					</nav>
+
+					<script>
+						window.onload = function() {
+						  if (typeof window.history.pushState === 'function') {
+							window.history.pushState({}, 'Page Title', '/');
+						  }
+						}
+					  </script>
                     
 
 				<!-- Main -->
