--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -22,15 +22,13 @@
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="../contacts.html">CONTACTS</a></li>
                 <li><a href="/users/profile">PROFILE</a></li>
+                <li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
             <footer id="footer" style="background-color: transparent;">
                 <div class="bg-white shadow overflow-hidden w-100">
                     <div class="px-4 pt-0 bg-white border-bottom">
                         <div class="media align-items-end ">
-                            <!--<div class="profile py-4 mr-3 ">
-                                <img src="../iconpng/profile.jpg" alt="..." width="130" class="rounded-circle" alt="Alt text" />
-                            </div>-->
                             <div class="profile py-4 mr-3 ">
                                 <% if (user.img_src) { %>
                                     <img src="../uploads/<%= user.img_src %>" alt="..." width="130" class="rounded-circle">
