--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,7 @@
                     <li class="active"><a href="/users/login">Login</a></li>
                     <li><a href="../contacts.html">CONTACTS</a></li>
                     <li><a href="/users/profile">PROFILE</a></li>
+                    <li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
             <footer id="footer">
@@ -33,13 +34,14 @@
                             <div class="field">
                                 <label for="password">Password</label>
                                 <input type="password" name="password" id="password" required/>
-                            </div>            
+                            </div>
                         </form>
                             <ul class="LoginButton">
                                 <br />
                                 <input type="submit" value="Let's party 🥳" class="button large">  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                <a href="/users/signup" class="button large">Sign Up</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                                <a href="#" class="logo">OR</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                <a href="/users/signup" class="button large">Sign Up</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                <a href="#" class="logo">OR</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                <a href="/auth/google" target="_blank"><img src="../iconpng/google.png" alt="" width="50px" height="auto" style="position: relative;"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                                 <a href="#"><img src="../iconpng/facebook.png" alt="" width="50px" height="auto" style="position: relative;"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                                 <a href="https://twitter.com/FrancescoTines1" target="_blank"><img src="../iconpng/twitter.png" alt="" width="50px" height="auto" style="position: relative;"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                                 <a href="https://github.com/francesco12801" target="_blank"><img src="../iconpng/github.png" alt="" width="50px" height="auto" style="position: relative;"></a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
