--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,7 @@
 						<li><a href="/users/login">LOGIN</a></li>
                         <li><a href="../contacts.html">CONTACTS</a></li>
 						<li><a href="/users/profile">PROFILE</a></li>
+						<li><a href="/users/partners">PARTNERS</a></li>
 						</ul>
 					</nav>
                     
