--- a/views/map.ejs
+++ b/views/map.ejs
@@ -30,7 +30,7 @@
 				<li><a href="/users/login">Login</a></li>
 				<li><a href="/contacts.html">CONTACTS</a></li>
 				<li><a href="/users/profile">PROFILE</a></li>
-
+				<li><a href="/users/partners">PARTNERS</a></li>
     		</ul>
   		</nav>
 		  <br />
