--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,6 +22,7 @@
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="../contacts.html">CONTACTS</a></li>
                 <li class="active"><a href="/users/profile">PROFILE</a></li>
+                <li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,7 +46,7 @@
                                     <p style="font-size: 2ch; margin-top: 20px; margin-bottom: 20px; width: 300px;"><%= bio %></p>
                                 <% } %>
                             </div>
-                            <div class="media-body mb-4" >
+                            <div class="media-body mr-5 pr-5">
                                 <center><h2><a>Welcome on Let's Party</a></h2></center>
                                 <center><h4 class = "mt-0 ml-2"></small>Hello <%= user.charAt(0).toUpperCase() + user.slice(1) %> 🥳</h4><br></center>
                             </div>
