--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     </head>
@@ -66,8 +67,13 @@
 
                         </div>
                     </div>
-                        
-                        <div class="py-4 border-bottom">
+                    <script src="../javascript/list_post.js"></script>
+                        <div class="border-bottom">
+                            <div class="post-container" id="post-container" style="margin: 0;">
+
+                            </div>
+                        </div>
+                        <div class="border-bottom">
                             <!-- <h5 class="mb-3">Favourite locals</h5> -->
                             <center><h2><a style="color:brown">Favourite locals 🥰</a></h2></center>
                             <br>
@@ -111,16 +117,12 @@
                             <br>
                         </div>
 
-                        <div class="'py-4 border-bottom">
-                            <center><h2><a style="color:lightblue">last visited</a></h2></center>
-                            <br>
-                        </div>
                         
 
                         <div id="invite-div" style="padding: 30px;">
                             
-                            <h2>Invita gli amici</h2>
-                            <button id="openPopup" onclick="friendsPopUp()">Invita un amico</button>
+                            <h2>Invite your friends</h2>
+                            <button id="openPopup" onclick="friendsPopUp()">Invite</button>
                             <div>
                             <p>Per noi di Let's Party la community è molto importante, condividi questa opportunità con i tuoi amici e colleghi!</p>
                             </div>
@@ -134,11 +136,11 @@
                                                 <input type="text" name="name" id="name" required/>
                                             </div>
                                             <div class="field">
-                                                <label for="email">His email</label>
+                                                <label for="email">Email</label>
                                                 <input type="text" name="email" id="email" required/>
                                             </div>
                                             <div class="field">
-                                            <label for="message">Message for Him</label>
+                                            <label for="message">Message</label>
                                             <textarea name="message" id="message" rows="3"></textarea>
                                             </div>
                                         </div>
