--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -80,7 +80,7 @@
 
                             <script src="../javascript/list_fav.js"></script>
 
-                                <form method='GET' action="/profile/list" id="form-submit">
+                                <form method='GET' action="/profile/list/0" id="form-submit">
                                     
                                 
                                     <div id="grid-container">
@@ -109,7 +109,7 @@
 
                             <script src="../javascript/display_rev.js"></script>
                             
-                            <form method='GET' action="/review/list" id="form-submit">  
+                            <form method='GET' action="/review/list/0" id="form-submit">  
                                 <div class="container-reviews-grid" id="container-reviews-grid">
                
                                 </div>
