--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -43,7 +43,7 @@
                                 <% } %>
                                     <h6 style="margin-top: 20px;"><%= username %></h6>
                                 <% if (bio) { %>
-                                    <p style="font-size: 2ch; margin-top: 20px; margin-bottom: 20px; width: 300px;"><%= bio %></p>
+                                    <p style="text-align: center; font-size: 2ch; margin-top: 20px; margin-bottom: 20px; width: 300px;"><%= bio %></p>
                                 <% } %>
                             </div>
                             <div class="media-body mr-5 pr-5">
@@ -69,9 +69,9 @@
                                             sidebar.style.display = "block";
                                         } 
                                       }
-                                      }
+                                    }
                                     
-                                    </script>
+                                </script>
 
                             </div>
 
