--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -68,10 +68,6 @@
                                 <img class="openbtn" style="width: 30px; height: 30px;" src = "../iconpng/icons_settings.png" onclick="moveNav()">
                                 <br />
                                 <h3 class="pt-2">SETTINGS</h3>
-                                <script>
-                                    
-                                    
-                                </script>
 
                             </div>
 
@@ -79,9 +75,9 @@
                         </div>
                     </div>
                     <script src="../javascript/list_post.js"></script>
-                        <div class="border-bottom">
-                            <div class="post-container" id="post-container" style="margin: 0;">
-
+                        <div>
+                            <div class="post-container" id="post-container" style="margin: auto 0 40px 0;">
+                                <!-- riempito da list_post.js -->
                             </div>
                         </div>
                         <div class="border-bottom">
@@ -133,10 +129,10 @@
                         <div id="invite-div" style="padding: 30px;">
                             
                             <h2>Invite your friends</h2>
-                            <button id="openPopup" onclick="friendsPopUp()">Invite</button>
                             <div>
-                            <p>Per noi di Let's Party la community è molto importante, condividi questa opportunità con i tuoi amici e colleghi!</p>
+                            <p>For us at Let's Party, the community is crucial. Share this opportunity with your friends and colleagues!</p>
                             </div>
+                            <button id="openPopup" onclick="friendsPopUp()">Invite</button>
 
                             <div class="popup" id="popup-friends" style="display: none;">
                                 <div class="popup-content">
