--- a/views/socialNetwork.ejs
+++ b/views/socialNetwork.ejs
@@ -7,6 +7,7 @@
         <script src="../../javascript/post_handler.js"></script>
         <script src="../javascript/listeners.js"></script>
         <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body style="background-size: cover;">
@@ -23,6 +24,7 @@
                 <li><a href="../users/login">Login</a></li>
                 <li><a href="../contacts.html">CONTACTS</a></li>
                 <li><a href="../users/profile">PROFILE</a></li>
+                <li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
 
@@ -30,15 +32,16 @@
                 
                 <button id="popup-button">Scrivi un post</button>
 
-                <form method="post" action="/send_post">
+                <form method="post" action="/send_post" enctype="multipart/form-data">
                     
-
-                <!-- pop up per scrivere nuovo post -->
+                    <!-- pop up per scrivere nuovo post -->
                     <div class="post-popup" id="post-popup" style="display: none;">
                         <div class="popup-content">
-                        <span class="close" id="close-popup">&times;</span>
-                        <textarea name="posttext" id="popup-textarea" placeholder="Inserisci il tuo testo" required></textarea>
-                        <input type="submit" value="Send post" />
+                            <span class="close" id="close-popup">&times;</span>
+                            <textarea name="posttext" id="popup-textarea" placeholder="What's on your mind?" required></textarea>
+                            <label for="image-input-button" class="btn btn-light" id="image-input-label">Add Image</label>
+                            <input type="file" name="postImage" accept="image" id="image-input-button" style="visibility: hidden;"/>
+                            <input type="submit" value="Send post" />
                         </div>
                     </div>
 
@@ -46,26 +49,9 @@
                 
 
                 <div class="post-container" id="post-container">
-
-                 
+                    <!-- riempito da post_handler.js -->
                 </div>
             </footer>
-                
-
-            <!-- <div id="main" style="background-color: transparent;">
-                
-                    <article class="post featured">
-                        <header class="major">
-                            <script src="javascript/countdown.js"></script> 
-                            <h2 style="color:whitesmoke;"><a>SOON AVAILABLE ON APP STORE. 😎</a></h2>
-                            <br />
-                            <hr style="color: whitesmoke; margin: auto;">
-                            <br />
-                            <p id="demo" style="font-size:50px; color: whitesmoke;" ></p>
-                        </header>
-                        <a href="#" class="image main"><img src="iconpng/soonAvailable.png " alt="" width="200px" height="auto"/></a>
-                    </article>
-            </div> -->
 
             <div id="copyright">
                         <ul>
@@ -81,5 +67,12 @@
 			<script src="../javascript/breakpoints.min.js"></script>
 			<script src="../javascript/util.js"></script>
 			<script src="../javascript/main.js"></script>
+            <!-- JS per cambiare la label del bottone di input con il file caricato -->
+            <script>
+                $("#image-input-button").change(function() {
+                    filename = this.files[0].name;
+                    $('#image-input-label').text(filename);
+                });
+            </script>
         </div>
     </body>
