--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Let's Party Future Project</title>
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel="stylesheet" href="/css/main.css">
         <noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
     </head>
     <body style="background-image: url('../photos/overlay.png'), linear-gradient(to bottom,#21293100, #21293127,#21293150,#21293153,#2129317c,#212931b0,#212931af,#212931cb,#212931ee,#212931fd), url('../photos/fiesta3.jpg');background-size: cover;">
