--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -76,10 +76,29 @@
                                                 <label for="Address">Address</label>
                                                 <input type="text" name="address" value="<%=user.address%>" id="address" required/>
                                             </div>
+
                                             <div class="field" style="width: 20%; float: left; padding: 20px;">
                                                 <label for="BirthDay">Birthday</label><br />  
                                                 <input type="date" name="b_day" id="b_day" readonly/>
+                                                
                                             </div>
+                                            <script>
+                                                console.log('<%=user.b_day%>');
+                                                const current_date = '<%=user.b_day%>';
+                                                const dateInput = document.getElementById('b_day');
+
+                                                const dateObject = new Date(current_date);
+                                                const formattedDate = formatDate(dateObject);
+                                                console.log(formattedDate);
+                                                dateInput.value = formattedDate;
+
+                                                function formatDate(date) {
+                                                    const day = date.getDate().toString().padStart(2, '0');
+                                                    const month = (date.getMonth() + 1).toString().padStart(2, '0');
+                                                    const year = date.getFullYear();
+                                                    return `${year}-${month}-${day}`;
+                                                }
+                                            </script>
                                             <div class="field" style="width: 30%; float: left; padding: 20px;">
                                                 <label for="PhoneNumber">Phone Number</label>
                                                 <input type="tel" name="p_num" value="<%=user.p_num%>" id="p_num" required/>
