--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -63,7 +63,7 @@
                                         <div >
                                             <div class="field" style="width: 50%; float: left; padding: 20px;">
                                                 <label for="username">Username </label>
-                                                <input type="text" name="username" value="<%=user.username%>" id="username" required/>
+                                                <input type="text" name="username" value="<%=user.username%>" id="username" readonly/>
                                             </div>
                                             <div class="field" style="width: 50%; float: left; padding: 20px;">
                                                 <label for="email">Email </label>
